# personal-os

./: .gitignore  AGENTS.md  README.md
core/: README.md  corporate-entities.md
core/architecture/: README.md  pnt-operator-runbook.md  pnt-runtime-inventory.md  runtime-manifest.yaml  source-of-truth.md  system-architecture.md
core/automation/: README.md  beeper-auth-health.py  chrome-cdp-helper.sh  comms-ingest-prompt.md  compare-machine-config.sh  email-identity-resolver.py  email-ingest.py  email-triage-contract.json  email-triage-design-preview.py  email-triage-draft-recovery.py  email-triage-prompt.md  email-triage-render.py  email-triage-runbook.md  email-triage-v2-runbook.md  email-triage-validator.py  email-triage.sh  ensure-superhuman.sh  meeting-sync-fetch.py  send-emmas-torch-report.py  setup-email-triage-v2-on-brain.sh  setup-on-brain.sh  superhuman-draft-status.py  (+5 more)
core/integrations/mcp-servers/contacts/: pyproject.toml
core/integrations/mcp-servers/contacts/contacts_mcp_server/: __init__.py  server.py
core/integrations/mcp-servers/google/: pyproject.toml
core/integrations/mcp-servers/google/src/google_mcp_server/: __init__.py  __main__.py  server.py
core/integrations/mcp-servers/google/src/google_mcp_server/auth/: __init__.py  oauth.py
core/integrations/mcp-servers/google/src/google_mcp_server/tools/: __init__.py  calendar.py  gmail.py
scripts/: .gitignore  audit_personal_os.py  daily_sync.sh  load_financials.py  menu_etl.py  reviews_etl.py  system_health_audit.py  toast_analytics_etl.py  toast_api_common.py  toast_etl.py  weather_etl.py
(+141 files in other folders)
