[project]
name = "google-mcp-server"
version = "1.0.0"
description = "Self-hosted MCP server for Gmail and Google Calendar using Google's official APIs"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "pydantic>=2.0.0",
]

[project.scripts]
google-mcp-server = "google_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_mcp_server"]
